<resources>
    <string name="app_name">TraceGPS</string>

    <!-- Texte privisoire pour certains TextView (à modifier par programmation) -->
    <string name="texte_provisoire">Texte provisoire</string>

    <!-- Les titres des activités -->
    <string name="title_activity_main">TraceGPS</string>
    <string name="title_activity_menu">TraceGPS</string>
    <string name="title_activity_creer_utilisateur">TraceGPS</string>
    <string name="title_activity_demander_nouveau_mdp">TraceGPS</string>
    <string name="title_activity_tester_geolocalisation">TraceGPS</string>
    <string name="title_activity_demander_autorisation">TraceGPS</string>
    <string name="title_activity_retirer_autorisation">TraceGPS</string>
    <string name="title_activity_demarrer_enregistrement">TraceGPS</string>
    <string name="title_activity_consulter_parcours">TraceGPS</string>
    <string name="title_activity_supprimer_parcours">TraceGPS</string>
    <string name="title_activity_changer_mdp">TraceGPS</string>
    <string name="title_activity_consulter_utilisateurs">TraceGPS</string>
    <string name="title_activity_supprimer_utilisateur">TraceGPS</string>

    <!-- Les textes de la page d'accueil -->
    <string name="main_titre1">Accueil</string>
    <string name="main_bouton_guide">Petit guide pour débutants</string>
    <string name="main_bouton_creer_compte">Créer mon compte</string>
    <string name="main_creer_compte_saisie_pseudo">Mon pseudo</string>
    <string name="main_creer_compte_saisie_adrmail">Mon adresse mail (obligatoire)</string>
    <string name="main_creer_compte_saisie_numtel">Mon n° de téléphone (facultatif)</string>
    <string name="main_creer_compte_bouton_envoyer">Envoyer</string>
    <string name="main_bouton_connecter">Me connecter</string>
    <string name="main_connecter_saisie_pseudo">Mon pseudo</string>
    <string name="main_connecter_saisie_mdp">Mon mot de passe</string>
    <string name="main_connecter_case_mdp_visible">Afficher le mot de passe</string>
    <string name="main_connecter_case_memoriser_parametres">Mémoriser les paramètres</string>
    <string name="main_connecter_bouton_envoyer">Envoyer</string>
    <string name="main_bouton_mdp_oublie">J\'ai oublié mon mot de passe</string>
    <string name="main_mdp_oublie_message">Pour confirmer que vous souhaitez obtenir un nouveau mot de passe, saisissez votre pseudo.</string>
    <string name="main_mdp_oublie_saisie_pseudo">Mon pseudo</string>
    <string name="main_mdp_oublie_bouton_envoyer">Envoyer</string>
    <string name="main_bouton_quitter">Quitter l\'application</string>
</resources>
