<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/tailleMarges"
    tools:context="jim.android.tracegps.MainActivity">

    <TextView
        android:id="@+id/main_textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:text="@string/main_titre1"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/main_buttonGuide"
        style="@android:style/Widget.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/main_bouton_guide" />

    <TextView
        android:id="@+id/main_textViewGuide"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texte_provisoire"
        android:textSize="12sp" />

    <Button
        android:id="@+id/main_buttonCreerCompte"
        style="@android:style/Widget.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/main_bouton_creer_compte" />

    <LinearLayout
        android:id="@+id/main_layoutCreerCompte"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/main_textViewCreerCompte"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/texte_provisoire"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/main_editTextCreerComptePseudo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/main_creer_compte_saisie_pseudo"
            android:inputType="textPersonName"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/main_editTextCreerCompteAdrMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:hint="@string/main_creer_compte_saisie_adrmail"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/main_editTextCreerCompteNumTel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:hint="@string/main_creer_compte_saisie_numtel"
            android:inputType="textEmailAddress" />

        <Button
            android:id="@+id/main_buttonCreerCompteEnvoyer"
            style="@android:style/Widget.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/main_creer_compte_bouton_envoyer"
            android:textSize="16sp" />

    </LinearLayout>

    <Button
        android:id="@+id/main_buttonConnecter"
        style="@android:style/Widget.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_bouton_connecter"
        android:textSize="16sp" />

    <LinearLayout
        android:id="@+id/main_layoutConnecter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/main_editTextConnecterPseudo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:hint="@string/main_connecter_saisie_pseudo"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/main_editTextConnecterMdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:hint="@string/main_connecter_saisie_mdp"
            android:inputType="textPassword" />

        <CheckBox
            android:id="@+id/main_checkBoxConnecterMdpVisible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_connecter_case_mdp_visible"
            android:textSize="14sp" />

        <CheckBox
            android:id="@+id/main_checkBoxConnecterMemoriser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_connecter_case_memoriser_parametres"
            android:textSize="14sp" />

        <Button
            android:id="@+id/main_buttonConnecterEnvoyer"
            style="@android:style/Widget.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/main_connecter_bouton_envoyer"
            android:textSize="16sp" />

    </LinearLayout>

    <Button
        android:id="@+id/main_buttonMdpOublie"
        style="@android:style/Widget.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/main_bouton_mdp_oublie" />

    <LinearLayout
        android:id="@+id/main_layoutMdpOublie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/main_textViewMdpOublie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/texte_provisoire"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/main_editTextMdpOubliePseudo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:hint="@string/main_mdp_oublie_saisie_pseudo"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/main_buttonMdpOublieEnvoyer"
            style="@android:style/Widget.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/main_mdp_oublie_bouton_envoyer"
            android:textSize="16sp" />

    </LinearLayout>

    <Button
        android:id="@+id/main_buttonQuitter"
        style="@android:style/Widget.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_bouton_quitter"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/main_textViewMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texte_provisoire"
        android:textSize="14sp" />

    <ProgressBar
        android:id="@+id/main_progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" />

</LinearLayout>
